--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "happy-coder",
+  "name": "kanban-coder",
   "version": "0.11.2",
   "description": "Mobile and Web client for Claude Code and Codex",
   "author": "Kirill Dubovitskiy",
@@ -9,6 +9,8 @@
   "bugs": "https://github.com/slopus/happy-cli/issues",
   "repository": "slopus/happy-cli",
   "bin": {
+    "kanban": "./bin/happy.mjs",
+    "kanban-mcp": "./bin/happy-mcp.mjs",
     "happy": "./bin/happy.mjs",
     "happy-mcp": "./bin/happy-mcp.mjs"
   },
@@ -70,6 +72,7 @@
   "dependencies": {
     "@anthropic-ai/claude-code": "2.0.24",
     "@anthropic-ai/sdk": "0.65.0",
+    "@happy/shared-team-config": "file:../shared/team-config",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@stablelib/base64": "^2.0.1",
     "@stablelib/hex": "^2.0.1",
