--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "dev:integration-test-env": "yarn build && tsx --env-file .env.integration-test src/index.ts",
     "prepublishOnly": "yarn build && yarn test",
     "release": "release-it",
-    "postinstall": "node scripts/unpack-tools.cjs"
+    "postinstall": "node scripts/unpack-tools.cjs",
+    "prerecommit": "yarn typecheck && yarn test"
   },
   "dependencies": {
     "@anthropic-ai/claude-code": "2.0.24",
