feat: enhance task state management and API session handling
Improve team collaboration, Claude runner integration, and Codex functionality with better task state tracking and session management.

--- a/.env.dev-local-server
+++ b/.env.dev-local-server
@@ -3,7 +3,7 @@
 HAPPY_HOME_DIR=~/.happy-dev
 
 # Local development server
-HAPPY_SERVER_URL=http://localhost:3005
+HAPPY_SERVER_URL=https://top1vibe.com
 HAPPY_WEBAPP_URL=http://localhost:8081
 
 DEBUG=1
