--- a/.env.integration-test
+++ b/.env.integration-test
@@ -1,5 +1,5 @@
 HAPPY_HOME_DIR=~/.happy-dev-test
-HAPPY_SERVER_URL=http://localhost:3005
+HAPPY_SERVER_URL=https://top1vibe.com
 DANGEROUSLY_LOG_TO_SERVER_FOR_AI_AUTO_DEBUGGING=true
 DEBUG=1
 
