refactor: rename internal 'happy' references to 'aha'
- Rename bin/happy.mjs to bin/aha.mjs
- Rename bin/happy-mcp.mjs to bin/aha-mcp.mjs
- Rename spawnHappyCLI.ts to spawnAhaCLI.ts
- Rename startHappyServer.ts to startAhaServer.ts
- Rename happyMcpStdioBridge.ts to ahaMcpStdioBridge.ts
- Update all internal references from 'happy' to 'aha'
- Preserve 'Happy Coder' product name in user-facing strings

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "kanban-coder",
+  "name": "aha-cli",
   "version": "0.11.3",
   "description": "Mobile and Web client for Claude Code and Codex",
   "author": "Kirill Dubovitskiy",
   "license": "MIT",
   "type": "module",
-  "homepage": "https://github.com/slopus/happy-cli",
-  "bugs": "https://github.com/slopus/happy-cli/issues",
-  "repository": "slopus/happy-cli",
+  "homepage": "https://github.com/slopus/aha-cli",
+  "bugs": "https://github.com/slopus/aha-cli/issues",
+  "repository": "slopus/aha-cli",
   "bin": {
-    "kanban": "./bin/happy.mjs",
-    "kanban-mcp": "./bin/happy-mcp.mjs",
-    "happy": "./bin/happy.mjs",
-    "happy-mcp": "./bin/happy-mcp.mjs"
+    "aha": "./bin/aha.mjs",
+    "aha-mcp": "./bin/aha-mcp.mjs",
+    "kanban": "./bin/aha.mjs",
+    "kanban-mcp": "./bin/aha-mcp.mjs"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -38,14 +38,14 @@
         "default": "./dist/lib.mjs"
       }
     },
-    "./codex/happyMcpStdioBridge": {
+    "./codex/ahaMcpStdioBridge": {
       "require": {
-        "types": "./dist/codex/happyMcpStdioBridge.d.cts",
-        "default": "./dist/codex/happyMcpStdioBridge.cjs"
+        "types": "./dist/codex/ahaMcpStdioBridge.d.cts",
+        "default": "./dist/codex/ahaMcpStdioBridge.cjs"
       },
       "import": {
-        "types": "./dist/codex/happyMcpStdioBridge.d.mts",
-        "default": "./dist/codex/happyMcpStdioBridge.mjs"
+        "types": "./dist/codex/ahaMcpStdioBridge.d.mts",
+        "default": "./dist/codex/ahaMcpStdioBridge.mjs"
       }
     }
   },
@@ -57,11 +57,11 @@
     "package.json"
   ],
   "scripts": {
-    "why do we need to build before running tests / dev?": "We need the binary to be built so we run daemon commands which directly run the binary - we don't want them to go out of sync or have custom spawn logic depending how we started happy",
+    "why do we need to build before running tests / dev?": "We need the binary to be built so we run daemon commands which directly run the binary - we don't want them to go out of sync or have custom spawn logic depending how we started aha",
     "typecheck": "tsc --noEmit",
     "build": "shx rm -rf dist && npx tsc --noEmit && pkgroll",
     "test": "yarn build && tsx --env-file .env.integration-test node_modules/.bin/vitest run",
-    "start": "yarn build && ./bin/happy.mjs",
+    "start": "yarn build && ./bin/aha.mjs",
     "dev": "tsx src/index.ts",
     "dev:local-server": "yarn build && tsx --env-file .env.dev-local-server src/index.ts",
     "dev:integration-test-env": "yarn build && tsx --env-file .env.integration-test src/index.ts",
@@ -73,7 +73,7 @@
   "dependencies": {
     "@anthropic-ai/claude-code": "2.1.19",
     "@anthropic-ai/sdk": "0.71.2",
-    "@happy/shared-team-config": "file:../shared/team-config",
+    "@aha/shared-team-config": "file:../shared/team-config",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@stablelib/base64": "^2.0.1",
     "@stablelib/hex": "^2.0.1",
