--- a/.env.dev-local-server
+++ b/.env.dev-local-server
@@ -1,10 +1,10 @@
-# Use separate dev directory for happy data
+# Use separate dev directory for aha data
 # Useful to allow having separate auth for local dev / production dogfooding
-HAPPY_HOME_DIR=~/.happy-dev
+AHA_HOME_DIR=~/.aha-dev
 
 # Local development server
-HAPPY_SERVER_URL=https://top1vibe.com
-HAPPY_WEBAPP_URL=http://localhost:8081
+AHA_SERVER_URL=https://top1vibe.com
+AHA_WEBAPP_URL=http://localhost:8081
 
 DEBUG=1
 # DANGEROUSLY_LOG_TO_SERVER_FOR_AI_AUTO_DEBUGGING=true
